<resources>

    <string name="app_name">移动惠民</string>

    <string name="loading">正在加载...</string>

    <string name="hall">惠民大厅</string>
    <string name="mine">我的</string>
    <string name="release_information">信息发布</string>
    <string name="cases">要案</string>
    <string name="vehicle_track">车辆追踪</string>
    <string name="suspect_track">疑犯追踪</string>
    <string name="people_lost">人员走失</string>
    <string name="lost_found">遗失招领</string>
    <string name="safe_info">安全信息</string>
    <string name="my_benefit">我的惠民</string>
    <string name="alarm">一键报警</string>
    <string name="eager_report">热心举报</string>
    <string name="police_interact">警民互动</string>
    <string name="rent_collect">租房采集</string>
    <string name="hotel_collect">旅馆采集</string>

    <string name="personal_center">个人中心</string>
    <string name="alarm_history">报警历史</string>
    <string name="emergency_contact">紧急联系人</string>
    <string name="near_police">附近派出所</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="change_password">修改密码</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>

    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">请再次确认密码</string>
    <string name="confirm">确认</string>

    <string name="add">添加</string>
    <string name="name">姓名：</string>
    <string name="contact_relation">联系人关系：</string>
    <string name="contact_phone">联系人电话：</string>
    <string name="contact_address">联系人地址：</string>
    <string name="name_hint">请输入姓名</string>
    <string name="relation_hint">请输入与联系人关系</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="address_hint">请输入联系地址</string>

    <string name="phone_number">手机号</string>
    <string name="change_phone">更换手机号</string>
    <string name="complete">完成</string>

    <string name="search_hint">关键字搜索</string>

    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_password_confirm_hint">请再次输入登录密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="basic_info">基本信息</string>
    <string name="gender">性别：</string>
    <string name="age">年龄：</string>
    <string name="miss_location">失踪地点：</string>
    <string name="miss_time">失踪时间：</string>
    <string name="birth_date">出生日期：</string>
    <string name="height_weight">身高体重：</string>
    <string name="hair_color">发型发色：</string>
    <string name="detail_info">详细信息</string>
    <string name="contact_family">联系家人</string>
    <string name="report">举报</string>

    <string name="personal_info">人员信息</string>
    <string name="nation">民族：</string>
    <string name="id_number">身份证号：</string>
    <string name="wanted_level">通缉级别：</string>
    <string name="case_category">涉案类别：</string>
    <string name="signalment">特征描述：</string>
    <string name="case_desc">案件描述</string>
    <string name="reward">悬赏奖励</string>

    <string name="car_number">车牌号：</string>
    <string name="car_type">车类型：</string>
    <string name="car_brand">车品牌：</string>
    <string name="car_color">车颜色：</string>

    <string name="goods_info">物品信息</string>
    <string name="good_name">物品名称：</string>
    <string name="pick_address">捡拾地点：</string>
    <string name="pick_time">捡拾时间：</string>
    <string name="goods_detail">物品详情</string>
    <string name="alarm_unit">报警单位</string>

    <string name="header">头像</string>
    <string name="nick_name">昵称</string>
    <string name="people_info">个人信息</string>
    <string name="change_nick_name">更改昵称</string>

    <string name="hotel_info">旅馆信息</string>
    <string name="address">地址：</string>
    <string name="hotel_name">旅馆名称：</string>
    <string name="room_name">房间名称：</string>
    <string name="contact_way">联系方式：</string>
    <string name="passenger_info">旅客信息</string>
    <string name="add_people">添加人员</string>
    <string name="hotel_name_hint">请输入旅馆名称</string>
    <string name="room_name_hint">请输入房间名称</string>
    <string name="contact_way_hint">请输入联系方式</string>
    <string name="id_number_hint">请输入身份证号</string>

    <string name="house_rent_info">房屋租住信息</string>
    <string name="householder_name">户主姓名：</string>
    <string name="house_number">房产证号：</string>
    <string name="rental_time">租住时间：</string>
    <string name="tenant_info">租户信息</string>
    <string name="add_tenant">添加租户</string>
    <string name="householder_name_hint">请输入户主姓名</string>
    <string name="house_number_hint">请输入房产证号</string>

    <string name="info_desc">信息描述</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>

    <string name="info_input_hint">请填写信息描述</string>

    <string name="function_not_open">功能暂未开通</string>

    <string name="time">时间：</string>
    <string name="site">地点：</string>
    <string name="phone">手机：</string>
    <string name="alarm_content">报警内容：</string>
    <string name="alarm_related">报警相关：</string>

    <string name="evaluate">评价</string>
    <string name="alarm_evaluate">处警评价</string>
    <string name="praise">好评</string>
    <string name="middle_evaluate">中评</string>
    <string name="bad_evaluate">差评</string>
    <string name="evaluate_hint">请输入评价内容</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>

    <string name="camera">拍照</string>
    <string name="album_select">从相册中选择</string>

    <string name="latest_version">已是最新版本</string>
    <string name="upgrade_title">升级提示</string>
    <string name="upgrade_desc">APP有重大更新，请及时升级！</string>
    <string name="upgrade_click">点我升级</string>

</resources>
