<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_4982F5"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_F6F6FA"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/s_15"
                android:text="@string/old_password"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />

            <EditText
                android:id="@+id/password_old"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="@dimen/s_100"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50"
            android:layout_marginTop="@dimen/s_1"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/s_15"
                android:text="@string/new_password"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />

            <EditText
                android:id="@+id/password_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="@dimen/s_100"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_50"
            android:layout_marginTop="@dimen/s_1"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/s_15"
                android:text="@string/confirm_password"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="@dimen/s_100"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>