<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F6F6FA"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/s_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s_7"
                android:layout_height="@dimen/s_6"
                android:background="@drawable/mark_must" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_10"
                android:text="@string/name"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </LinearLayout>

        <EditText
            android:id="@+id/eca_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/s_40"
            android:layout_toLeftOf="@+id/eca_address_book"
            android:background="@null"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/s_140"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_15" />

        <Button
            android:id="@+id/eca_address_book"
            android:layout_width="@dimen/s_18"
            android:layout_height="@dimen/s_21"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/s_20"
            android:background="@drawable/icon_address_book" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:layout_marginTop="@dimen/s_1"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/s_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s_7"
                android:layout_height="@dimen/s_6"
                android:background="@drawable/mark_must" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_10"
                android:text="@string/contact_relation"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </LinearLayout>

        <EditText
            android:id="@+id/eca_relation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/relation_hint"
            android:maxLength="6"
            android:paddingLeft="@dimen/s_140"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:layout_marginTop="@dimen/s_1"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/s_15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s_7"
                android:layout_height="@dimen/s_6"
                android:background="@drawable/mark_must" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_10"
                android:text="@string/contact_phone"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/f_15" />
        </LinearLayout>

        <EditText
            android:id="@+id/eca_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:paddingLeft="@dimen/s_140"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_50"
        android:layout_marginTop="@dimen/s_1"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/s_32"
            android:text="@string/contact_address"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/f_15" />

        <EditText
            android:id="@+id/eca_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            android:paddingLeft="@dimen/s_140"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_15" />
    </RelativeLayout>

</LinearLayout>