<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/s_10"
    android:paddingRight="@dimen/s_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_20"
            android:text="@string/upgrade_title"
            android:textColor="@color/color_4982F5"
            android:textSize="@dimen/s_15"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_20"
            android:gravity="center"
            android:text="@string/upgrade_desc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/s_15"/>


        <Button
            android:id="@+id/upgrade"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s_40"
            android:layout_marginBottom="@dimen/s_20"
            android:layout_marginLeft="@dimen/s_10"
            android:layout_marginRight="@dimen/s_10"
            android:layout_marginTop="@dimen/s_20"
            android:background="@drawable/button_selector"
            android:text="@string/upgrade_click"
            android:textColor="@android:color/white"
            android:textSize="@dimen/s_15"/>
    </LinearLayout>

</LinearLayout>