<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F6F6FA"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/personal_info"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="姓名A"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/s_100"
            android:layout_marginRight="@dimen/s_5"
            android:text="【已追踪59天1小时】"
            android:textColor="@color/color_FFA336"
            android:textSize="@dimen/f_15"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="男"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nation"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="汉"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="2017-9-31 10:39"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="41092819788783782718"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanted_level"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_wanted_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="A级"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_category"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_case_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:text="故意伤害罪"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_5"
        android:paddingLeft="@dimen/s_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signalment"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>

        <TextView
            android:id="@+id/st_signalment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/s_100"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="大眼睛，短发，身高1.70左右，体态中等"
            android:textColor="@android:color/black"
            android:textSize="@dimen/f_13"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s_10"
        android:background="@color/color_F6F6FA"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/case_desc"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>

    <TextView
        android:id="@+id/st_case_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/s_15"
        android:layout_marginRight="@dimen/s_15"
        android:layout_marginTop="@dimen/s_10"
        android:ellipsize="end"
        android:lineSpacingExtra="@dimen/s_5"
        android:maxLines="3"
        android:text="2017年10月20号18时，发现姓名A从位于北京市朝阳区和平街15区附近走失，姓名A，陕西省安康市人，走失时身高100cm左右，体态教授，短发，上身蓝色半袖，下渗川河色短裤，娇喘白色运动鞋，未携带其他物品。"
        android:textColor="@android:color/black"
        android:textSize="@dimen/f_13"/>

    <ImageView
        android:id="@+id/st_header"
        android:layout_width="@dimen/s_67"
        android:layout_height="@dimen/s_76"
        android:layout_marginBottom="@dimen/s_10"
        android:layout_marginLeft="@dimen/s_15"
        android:layout_marginTop="@dimen/s_10"
        android:background="@drawable/icon_header_default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F6F6FA"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/reward"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>

    <TextView
        android:id="@+id/st_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/s_15"
        android:layout_marginTop="@dimen/s_10"
        android:text="@string/reward"
        android:textColor="@android:color/black"
        android:textSize="@dimen/f_13"/>

</LinearLayout>