<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F6F6FA"
    android:orientation="vertical">

    <include layout="@layout/layout_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/goods_info"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/s_10"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>

            <TextView
                android:id="@+id/lf_goods_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_80"
                android:text="钱包"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>

            <TextView
                android:id="@+id/lf_pick_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_80"
                android:text="北京市朝阳区和平街15区"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_time"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>

            <TextView
                android:id="@+id/lf_pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s_80"
                android:text="2017-9-30 10:15"
                android:textColor="@android:color/black"
                android:textSize="@dimen/f_13"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F6F6FA"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/goods_detail"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>

    <TextView
        android:id="@+id/lf_goods_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/s_10"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_10"
        android:text="银行卡，会员卡"
        android:textColor="@android:color/black"
        android:textSize="@dimen/f_13"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F6F6FA"
        android:paddingBottom="@dimen/s_5"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_5"
        android:text="@string/alarm_unit"
        android:textColor="@color/color_4982F5"
        android:textSize="@dimen/f_15"/>

    <TextView
        android:id="@+id/lf_alarm_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/s_10"
        android:paddingLeft="@dimen/s_15"
        android:paddingTop="@dimen/s_10"
        android:text="北京市公安交警大队失物招领处"
        android:textColor="@android:color/black"
        android:textSize="@dimen/f_13"/>
</LinearLayout>